# ez-ptc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  pyproject.toml
docs/: api-reference.md  concepts.md  examples.md  getting-started.md  index.md  mcp-bridge.md  prompt-mode.md  security.md  tool-chaining.md  tool-mode.md
examples/: README.md  example_anthropic.py  example_demo.py  example_google_genai.py  example_langchain.py  example_litellm.py  example_openai.py  example_prompt_mode.py  example_pydantic_ai.py  shared_tools.py
examples/advanced/: _mcp_mock.py  example_advanced_schemas.py  example_async_tools.py  example_custom_sandbox.py  example_error_handling.py  example_mcp_bridge.py  example_pydantic_models.py  example_validation.py
examples/basics/: example_custom_prompts.py  example_demo.py
examples/frameworks/: example_anthropic.py  example_google_genai.py  example_langchain.py  example_litellm.py  example_openai.py  example_pydantic_ai.py
examples/mcp_live/: _mcp_session.py  example_mcp_anthropic.py  example_mcp_chaining.py  example_mcp_google_genai.py  example_mcp_langchain.py  example_mcp_litellm.py  example_mcp_openai.py  example_mcp_prompt_mode.py  example_mcp_pydantic_ai.py
examples/prompt_mode/: example_error_recovery.py  example_prompt_mode.py
src/ez_ptc/: __init__.py  executor.py  mcp.py  sandbox.py  schema.py  tool.py  toolkit.py  (+1 more)
tests/: test_approval.py  test_executor.py  test_mcp.py  test_retry.py  test_sandbox.py  test_schema.py  test_streaming.py  test_tool.py  test_toolkit.py  test_validator.py
